Use statefulset instead of deployment for postgres. Also fix bug in backend where authentication was not working in production mode.